Tidied up theme.

--- a/lecture2/index.html
+++ b/lecture2/index.html
@@ -1,8 +1,12 @@
 ---
 title: "Lecture 2: Homology and Pairwise Alignment"
-speaker: Tim Vaughan
-
-layout: lecture
-reveal:
-    slideNumber: true
+date: 2017-03-07
 ---
+
+<section>
+    <h2>Sequence Homology</h2>
+</section>
+
+<section>
+    <h2>Pairwise Alignment</h2>
+</section>
