Fleshing out lecture structure.

--- a/lecture2/index.html
+++ b/lecture2/index.html
@@ -3,10 +3,32 @@ title: "Lecture 2: Homology and Pairwise Alignment"
 date: 2017-03-07
 ---
 
-<section>
+<section class="center">
     <h2>Sequence Homology</h2>
 </section>
 
 <section>
-    <h2>Pairwise Alignment</h2>
+    <section class="center">
+        <h2>Pairwise Alignment</h2>
+    </section>
+
+    <section>
+        <h3>The goal of sequence alignment</h3>
+    </section>
+
+    <section>
+        <h3>Dynamic Programming</h3>
+    </section>
+
+    <section>
+        <h3>Pairwise Alignment</h3>
+    </section>
+
+    <section>
+        <h3>Scoring Alignments</h3>
+    </section>
+
+    <section>
+        <h3>Log-odds matrices</h3>
+    </section>
 </section>
