Wasted time mucking with styles.

--- a/lecture2/index.html
+++ b/lecture2/index.html
@@ -1,10 +1,31 @@
 ---
-title: "Lecture 2: Homology and Pairwise Alignment"
-date: 2017-03-07
+lecture_num: 2
+
+reveal:
+    history: true
 ---
+
+<section>
+    <h2>House-keeping</h2>
+
+    <ol class="spaced">
+        <li>No lab this Friday! (Despite what timetable says.)</li>
+        <li>Assignment 1 will be <b>available</b> on the morning of <b>Monday the 13<sup>th</sup> of March</b>.</li>
+        <li>Office hours:
+            <ul>
+                <li>1-3pm, Wednesday</li>
+                <li>Email <a href="mailto:tgvaughan@gmail.com">tgvaughan@gmail.com</a> to arrange other times.</li>
+            </ul>
+        </li>
+    </ol>
+</section>
 
 <section class="center">
     <h2>Sequence Homology</h2>
+
+    <div class="textbox">
+        Test
+    </div>
 </section>
 
 <section>
