Added another slide to l2.

--- a/lecture2/index.html
+++ b/lecture2/index.html
@@ -9,13 +9,14 @@ reveal:
 <section>
     <h2>House-keeping</h2>
 
-    <ol class="spaced">
+    <ol class="spaced" style="margin-top:10%">
         <li>No lab this Friday! (Despite what timetable says.)</li>
         <li>Assignment 1 will be <b>available</b> on the morning of <b>Monday the 13<sup>th</sup> of March</b>.</li>
         <li>Office hours:
             <ul>
                 <li>1-3pm, Wednesday</li>
-                <li>Email <a href="mailto:tgvaughan@gmail.com">tgvaughan@gmail.com</a> to arrange other times.</li>
+                <li>Almost any other time, but ...</li>
+                <li>Email <a href="mailto:tgvaughan@gmail.com">tgvaughan@gmail.com</a> to avoid dissapointment.</li>
             </ul>
         </li>
     </ol>
@@ -91,6 +92,23 @@ reveal:
     <section>
         <h3>Dynamic Programming</h3>
 
+        <br>
+        <br>
+
+        <ul class="spaced">
+            <li>Method for solving combinatorial optimization problems.</li>
+            <li>Guaranteed to give optimal solution.</li>
+            <li>Generalization of "divide-and-conquer".</li>
+            <li>Relies on <b>principle of optimality</b>:</li>
+        </ul>
+        <blockquote>
+            Sub-optimal solution of a sub-problem cannot be part of the optimal solution of the full problem.
+        </blockquote>
+
+    </section>
+
+    <section>
+        <h3>Principle of Optimality</h3>
     </section>
 
     <section>
