Added svg figures.

--- a/lecture2/index.html
+++ b/lecture2/index.html
@@ -59,12 +59,16 @@ reveal:
         <h3>The goal of pairwise alignment</h3>
 
         <blockquote style="margin-top:10%">
-            Aligning one sequence with another allows us to easilly assess the degree to which the two sequences are homologous.
+            Aligning one sequence with another allows us to assess the homology between the two sequences.
         </blockquote>
 
         <blockquote style="margin-top:2em">Alignment allows us to break down the question of sequence
             similarity into a large number of smaller questions about character
             similarity.</blockquote>
+
+        <blockquote style="margin-top:2em">Pairwise alignment is the basis of
+        multiple sequence alignment which itself forms the basis for
+        phylogenetic reconstruction from molecular data.</blockquote>
     </section>
 
     <section>
@@ -105,17 +109,272 @@ reveal:
             Sub-optimal solution of a sub-problem cannot be part of the optimal solution of the full problem.
         </blockquote>
 
+        <br>
+
+        <div>
+            Problems suitable for solution by dynamic programming are said to have<br>
+            <b>optimal substructure</b>.
+        </div>
+
     </section>
 
     <section>
         <h3>Principle of Optimality</h3>
+
+        <div style="width:1000px; height:600px; position:relative;left:0; top:2em">
+            <img data-src="optimality1.svg"
+                style="position:absolute;left:0;top:0;width:1000px;box-shadow:none">
+            <img data-src="optimality2.svg" class="fragment"
+                style="position:absolute;left:0;top:0;width:1000px;background-color:white;box-shadow:none">
+        </div>
+    </section>
+
+    <section>
+        <h3>Keys to efficiency</h3>
+
+        <ul class="spaced" style="margin-top:5%; width:70%">
+            <li>Computation is carried out from the bottom-up.</li>
+            <li>Store all solutions to sub-problems in a table.</li>
+            <li>All possible sub-problems solved exactly once, beginning with
+            smallest sub-problems.</li>
+            <li>Work up to original problem instance.</li>
+            <li>Only optimal solutions to sub-problems are used to compute
+                solution to problem at next level.</li>
+            <li>Don't carry out computation in recursive, top-down manner
+                <ul>
+                    <li>same sub-problems would be solved many times.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>Pairwise amino acid alignment</h3>
+
+        <div class="textbox" style="margin-top:10%">
+            <div class="title">Sequences</div>
+            <pre style="font-size:35px;box-shadow:none;margin-bottom:0">
+            x = a c g g t s
+            y = a w g c c t t
+            </pre>
+        </div>
+
+        <div class="textbox" style="margin-top:2em">
+            <div class="title">Alignment</div>
+            <pre style="font-size:35px;box-shadow:none;margin-bottom:0">
+            x' = a - c g g - t s
+            y' = a w - g c c t t
+            </pre>
+        </div>
     </section>
 
     <section>
         <h3>Scoring Alignments</h3>
+
+        <ul style="margin-top:0.5em">
+            <li>Numeric score associated with each column.</li>
+            <li>Total score given by sum of column scores.</li>
+            <li>Column types:
+                <ul>
+                    <li style="color:red">Identical (+ve score)</li>
+                    <li style="color:green">Conservative (+ve score)</li>
+                    <li style="color:purple">Non-conservative (-ve score)</li>
+                    <li style="color:blue">Gap (-ve score)</li>
+                </ul>
+        </ul>
+
+        <div class="textbox" style="margin-top:1em">
+            <div class="title">Alignment</div>
+            <pre style="font-size:35px;box-shadow:none;margin-bottom:0">
+            x' = <font color="red">a</font> <font color="blue">- c</font> <font color="red">g</font> <font color="purple">g</font> <font color="blue">-</font> <font color="red">t</font> <font color="green">s</font>
+            y' = <font color="red">a</font> <font color="blue">w -</font> <font color="red">g</font> <font color="purple">c</font> <font color="blue">c</font> <font color="red">t</font> <font color="green">t</font>
+            </pre>
+        </div>
+
+        <p>The <b>score matrix</b> (or substitution matrix) $s$ contains the column
+        scores of every possible pair.  A column with the character pair
+        $a,b$ is given by the matrix entry $s(a,b)$.</p>
+    </section>
+
+    <section>
+        <h3>Scoring methods</h3>
+
+        <ul style="margin-top:2em">
+            <li>Model-based
+                <ul>
+                    <li>Log-odds scoring</li>
+                </ul>
+            </li>
+
+            <li style="margin-top:1em">Empirical
+                <ul>
+                    <li>Often used for amino acid alignments</li>
+                    <li>PAM matrices</li>
+                    <li>BLOSUM matrices</li>
+                    <li>JTT</li>
+                    <li>WAG</li>
+                </ul>
+            </li>
+
+            <li style="margin-top:1em">Different matrices used depending on the
+                level of similarity of the sequences.
+                <ul>
+                    <li>How do you know the similarity before constructing an alignment?</li>
+                </ul>
+            </li>
+
+        </ul>
+
     </section>
 
     <section>
         <h3>Log-odds matrices</h3>
+
+        <blockquote style="font-style:italic;margin-top:10%">
+            What we want to know is whether two sequences are homologous
+            (evolutionarily related) or not, so we want an alignment score that
+            reflects that. Theory says that if you want to compare two
+            hypotheses, a good score is the log-odds score: the logarithm of
+            the ratio of the likelihoods of your two hypotheses. If we assume
+            that each aligned residue pair is statistically independent of the
+            others (biologically dubious, but mathematically convenient), the
+            alignment score is the sum of the individual log-odds score for
+            each aligned residue pair.
+        </blockquote>
+        <a href="http://profs.scienze.univr.it/~liptak/ALBioinfo/2012_2013/2011_2012/files/nbt0804-1035.pdf" class="cite">Sean R Eddy, Nature Biotechnology, 2004</a>
+
     </section>
+
+    <section>
+        <h3>Log-odds matrices</h3>
+
+        <div style="margin-top:10%;border:1px solid black; padding: 1em">
+        \begin{equation*}
+        s(a,b) = \frac{1}{\lambda}\log \frac{p_{a,b}}{f_a f_b}
+        \end{equation*}
+        </div>
+
+        <blockquote style="font-style:italic;margin-top:2em">
+            The numerator ($p_{ab}$) is the likelihood of the hypothesis we want to
+            test: that these two residues are correlated because they’re
+            homologous. Thus, $p_{ab}$ are the target frequencies: the probability
+            that we expect to observe residues a and b alignment in homologous
+            sequence alignments. The denominator is the likelihood of a null
+            hypothesis: that these two residues are uncorrelated and unrelated,
+            occurring independently.
+        </blockquote>
+        <a href="http://profs.scienze.univr.it/~liptak/ALBioinfo/2012_2013/2011_2012/files/nbt0804-1035.pdf" class="cite">Sean R Eddy, Nature Biotechnology, 2004</a>
+    </section>
+
+    <section>
+        <h3>Evolutionary interpretation of match/mismatch scores</h3>
+
+        <div class="figure inline">
+            $a,b$ homologous<br>
+        <svg width="300" height="200" viewbox="-50,0,250,220" style="margin-top:0.5em">
+            <defs>
+            <marker id="startarrow" markerWidth="10" markerHeight="7" refX="0" refY="3.5" orient="auto" markerUnits="strokeWidth">
+            <polygon points="10 0, 10 7, 0 3.5" fill="gray"/>
+            </marker>
+
+            <marker id="endarrow" markerWidth="10" markerHeight="7" refX="10" refY="3.5" orient="auto" markerUnits="strokeWidth">
+            <polygon points="0 0, 10 3.5, 0 7" fill="gray"/>
+            </marker>
+
+            </defs>
+            <path d="M0 200 L100 0 L200 200" fill="none" stroke="black" stroke-width="2"/>
+            <path d="M-50 0 L250 0 M-50 200 L250 200" fill="none" stroke="gray" stroke-width="2"/>
+            <line x1="-25" y1="200" x2="-25" y2="0" fill="none" stroke="gray" stroke-width="2"
+            marker-end="url(#endarrow)" marker-start="url(#startarrow)"/>
+
+            <text x="-10" y="220">a</text>
+            <text x="190" y="220">b</text>
+
+            <text x="-25" y="100">t/2</text>
+        </svg>
+        </div>
+
+        <div class="figure inline">
+        <svg width="400" height="150">
+            <line x1="50" y1="100" x2="350" y2="100" fill="none" stroke="black" stroke-width="2"/>
+            <text x="30" y="110">a</text>
+            <text x="360" y="110">b</text>
+
+            <line x1="50" y1="50" x2="350" y2="50" fill="none" stroke="gray" stroke-width="2"
+            marker-end="url(#endarrow)" marker-start="url(#startarrow)"/>
+            <text x="170" y="40">d = &mu;t</text>
+        </svg><br>
+        <ul style="font-size:0.8em">
+            <li>$d=0.1$ is roughly 90% similarity</li>
+            <li>$d$ is average number of changes per site</li>
+        </ul>
+        </div>
+
+        <br>
+
+        <hr style="margin-top:1em">
+
+        <br>
+
+        <div class="figure inline">
+            $a,b$ non-homologous<br>
+        <svg width="300" height="200" viewbox="-50,0,250,200" style="margin-top:0.5em">
+            <path d="M0 200 L0 0 M200 200 L200 0" fill="none" stroke="black" stroke-width="2"/>
+            <path d="M-50 0 L250 0 M-50 200 L250 200" fill="none" stroke="gray" stroke-width="2"/>
+            <line x1="-25" y1="200" x2="-25" y2="0" fill="none" stroke="gray" stroke-width="2"
+            marker-end="url(#endarrow)" marker-start="url(#startarrow)"/>
+        </svg>
+        </div>
+
+        <div class="figure inline">
+        <svg width="400" height="200">
+            <line x1="50" y1="100" x2="350" y2="100" fill="none" stroke="black" stroke-width="2"/>
+            <polygon points="195 110, 195 90, 205 90, 205 110" fill="white"/>
+
+            <line x1="195" y1="110" x2="195" y2="90" fill="none" stroke="black" stroke-width="2"/>
+            <line x1="205" y1="110" x2="205" y2="90" fill="none" stroke="black" stroke-width="2"/>
+            <text x="30" y="110">a</text>
+            <text x="360" y="110">b</text>
+
+            <line x1="50" y1="50" x2="350" y2="50" fill="none" stroke="gray" stroke-width="2"
+            marker-end="url(#endarrow)" marker-start="url(#startarrow)"/>
+            <text x="170" y="40">d = &infin;</text>
+        </svg>
+        </div>
+
+    </section>
+
+    <section>
+        <h3>Jukes-Cantor substitution model</h3>
+
+        <ul class="spaced" style="margin-top:10%">
+            <li>All mutations equally likely
+                <ul>
+                    <li>$a\leftrightarrow b$ occur at the same rate for all character states $a$ and $b$.</li>
+                    <li>$a,b \in {A,C,G,T}$ for DNA</li>
+                    <li>$a,b \in {A,R,N,D,\ldots,W,Y,V}$ for amino acids</li>
+                </ul>
+            </li>
+
+            <li>All characters equally likely (equal base frequencies)
+                <ul>
+                    <li> ${0.25, 0.25, 0.25, 0.25}$ for DNA</li>
+                    <li> ${0.05, \ldots, 0.05}$ for proteins</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>Evolutionary interpretation of match/mismatch scores</h3>
+    </section>
+
+    <section>
+        <h3>Log-odds match score</h3>
+    </section>
+
+    <section>
+        <h3>Log-odds mismatch score</h3>
+    </section>
+
 </section>
