--- a/lecture2/index.html
+++ b/lecture2/index.html
@@ -645,6 +645,33 @@ reveal:
        \end{align*}
    </section>
 
+   <section>
+       <h3>Principle of Optimality</h3>
+
+       <p>Basis:</p>
+
+       <ul class="spaced">
+           <li>$F(0,0) = 0$
+
+           </li>
+           <li>$F(i,0) = F(i-1,0) + s(x_i,-)$
+               <div style="border:solid 1px black;background-color:lime;width:200px">
+                   &mdash;, &mdash;, &mdash;, $\ldots$, &mdash;
+               </div>
+               <div style="border:solid 1px black;background-color:lime;margin-top:5px;width:200px">
+                   $x_1, x_2, x_3, \ldots, x_i$
+               </div>
+           </li>
+           <li>$F(0,j) = F(0,j-1) + s(-,y_j)$
+               <div style="border:solid 1px black;background-color:lime;margin-top:5px;width:200px">
+                   $y_1, y_2, y_3, \ldots, y_j$
+               </div>
+               <div style="border:solid 1px black;background-color:lime;width:200px">
+                   &mdash;, &mdash;, &mdash;, $\ldots$, &mdash;
+               </div>
+           </li>
+       </ul>
+   </section>
 
    <section>
        <h3>Smith-Waterman algorithm</h3>
